Fix z-index

--- a/pad/style.css
+++ b/pad/style.css
@@ -32,6 +32,7 @@ body, html {
 nav {
     padding: 0.5rem;
     position: fixed;
+    z-index: 100;
     top: 0;
     left: 0;
     width: 100%;
